# routes/swagger.js
@@ -1,8 +1,7 @@
-const routes = require("express").Router();
+const router = require("express").Router();
 const swaggerUi = require("swagger-ui-express");
-const swaggerDoc = require("../swagger.json");
+const swaggerDocument = require("../swagger.json");
+router.use("/api-docs", swaggerUi.serve);
+router.get("/api-docs", swaggerUi.setup(swaggerDocument));
 
-routes.use("/api-docs", swaggerUi.serve);
-routes.get("/api-docs", swaggerUi.setup(swaggerDoc));
-
-module.exports = routes;
+module.exports = router;
